--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+
+        body {
+            background-image: url(img/wallpaper001.jpg);
+        }
+
         div.quadrado {
             border: 1px solid black;
             width: 300px;
@@ -13,7 +18,21 @@
             border-radius: 10px;
             background-color: lightgray;
             display: inline-block;
+            
         }
+
+        div#q1 {
+            background-color: skyblue;
+        }
+
+        div#q2 {
+            background-image: linear-gradient(to bottom, yellow, red);
+        }
+
+        div#q3 {
+            background-image: url(img/pattern003.png);
+        }
+
     </style>
 </head>
 <body>
