--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalização de fundos</title>
     <style>
-
-        body {
-            background-image: url(img/);
-        }
-
-
-
+         body {
+            background-image: url(img/walpaper1.jpg);
+            background-repeat: no-repeat;
+            background-size: 100%;
+         }
     </style>
 </head>
 <body>
-    
+    <h1>Olá mundo</h1>
 </body>
 </html>
